--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">轻账</string>
+    <string name="app_name">清账</string>
     <string name="splash_count_time">3s跳过</string>
     <string name="home_me">我的</string>
     <string name="login_right_now">立即登录</string>
@@ -92,6 +92,10 @@
     <string name="report_froms_textview">报表</string>
     <string name="more">更多</string>
     <string name="add_account">添加账户</string>
+    <string name="account_amount">账户金额</string>
+    <string name="account_name">账户名称</string>
+    <string name="account_desc">账户描述</string>
+    <string name="account_icon">账户图标</string>
 
 
 </resources>
